[workspace]
members = [
  "macro",
  "elements/macro"
]

[package]
authors = ["Tangram <root@tangram.xyz"]
description = "Build web applications with Rust."
documentation = "https://docs.rs/pinwheel"
edition = "2018"
homepage = "https://github.com/tangramxyz/pinwheel"
license = "MIT"
name = "pinwheel"
publish = true
repository = "https://github.com/tangramxyz/pinwheel"
version = "0.1.0"

[lib]
path = "lib.rs"

[dependencies]
futures = "0.3"
futures-signals = "0.3"
pin-project = "1"
pinwheel_elements_macro = { path = "elements/macro" }
pinwheel_macro = { path = "macro" }
serde = "1"
serde_json = "1"
tracing = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "Comment",
  "CssStyleDeclaration",
  "Document",
  "DocumentFragment",
  "DomStringMap",
  "DomTokenList",
  "Element",
  "HtmlElement",
  "Node",
  "Text",
  "Window",

  "Event",
  "CompositionEvent",
  "FocusEvent",
  "InputEvent",
  "KeyboardEvent",
  "MouseEvent",
  "TouchEvent",

  "HtmlAnchorElement",
  "HtmlAreaElement",
  "HtmlAudioElement",
  "HtmlBaseElement",
  "HtmlBodyElement",
  "HtmlBrElement",
  "HtmlButtonElement",
  "HtmlCanvasElement",
  "HtmlDListElement",
  "HtmlDataElement",
  "HtmlDataListElement",
  "HtmlDetailsElement",
  "HtmlDialogElement",
  "HtmlDirectoryElement",
  "HtmlDivElement",
  "HtmlEmbedElement",
  "HtmlFieldSetElement",
  "HtmlFontElement",
  "HtmlFormElement",
  "HtmlFrameElement",
  "HtmlFrameSetElement",
  "HtmlHeadElement",
  "HtmlHeadingElement",
  "HtmlHrElement",
  "HtmlHtmlElement",
  "HtmlIFrameElement",
  "HtmlImageElement",
  "HtmlInputElement",
  "HtmlLabelElement",
  "HtmlLegendElement",
  "HtmlLiElement",
  "HtmlLinkElement",
  "HtmlMapElement",
  "HtmlMediaElement",
  "HtmlMenuElement",
  "HtmlMenuItemElement",
  "HtmlMetaElement",
  "HtmlMeterElement",
  "HtmlModElement",
  "HtmlOListElement",
  "HtmlObjectElement",
  "HtmlOptGroupElement",
  "HtmlOptionElement",
  "HtmlOutputElement",
  "HtmlParagraphElement",
  "HtmlParamElement",
  "HtmlPictureElement",
  "HtmlPreElement",
  "HtmlProgressElement",
  "HtmlQuoteElement",
  "HtmlScriptElement",
  "HtmlSelectElement",
  "HtmlSlotElement",
  "HtmlSourceElement",
  "HtmlSpanElement",
  "HtmlStyleElement",
  "HtmlTableCaptionElement",
  "HtmlTableCellElement",
  "HtmlTableColElement",
  "HtmlTableElement",
  "HtmlTableRowElement",
  "HtmlTableSectionElement",
  "HtmlTemplateElement",
  "HtmlTextAreaElement",
  "HtmlTimeElement",
  "HtmlTitleElement",
  "HtmlTrackElement",
  "HtmlUListElement",
  "HtmlUnknownElement",
  "HtmlVideoElement",
]
