[package]
authors = ["Tangram <root@tangram.dev"]
description = "Build web applications with Rust."
documentation = "https://docs.rs/pinwheel"
edition = "2018"
homepage = "https://github.com/tangramdotdev/pinwheel"
license = "MIT"
name = "pinwheel_elements_macro"
publish = true
repository = "https://github.com/tangramdotdev/pinwheel"
version = "0.2.0"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
heck = "0.3"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
